--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </ul>
 
 
-      <h2>Well on November 13th, 2016  You will be able to watch there life story and the obstles they faced throughout there 5 years of relationship.... <span></span></h2>
+      <h2>Well on November 13th, 2016  You will be able to watch there life story and the obstles they faced throughout they're 5 years of relationship.... <span></span></h2>
 
       <img src="tear.png" id="tear" class="png" style="width: 300px ;height:250px">
       <img src="love.png" class="image" style="width: 300 px ;height:250px">
